# HI111X

./: CMakeLists.txt  build.js  index.html  input.c  package-lock.json  package.json  reload.js  sdl_app.c  server.js
code/base/: base_arena.h  base_core.h  base_inc.c  base_inc.h  base_profile.c  base_profile.h  base_string.c  base_string.h
code/game/: game.c  game.h
code/platform/: native_plaform.c
game/: game.c  game.h
hot_reload/: build.js  build_config.json  hot_reload.js  index.html  input.c  input.h  package-lock.json  package.json  reload.js  sdl_app.c  server.js
hot_reload/backends/sdl2/: index.html  input.c  input.h  sdl_app.c
hot_reload/base/: base_arena.c  base_arena.h  base_core.c  base_inc.h  base_profile.h  base_string.h
hot_reload/game/: game.c  game.h
